[package]
name = "soroban-env-host-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[lib]
name = "soroban_env_host_fuzz"
path = "src/lib.rs"

[dependencies]
libfuzzer-sys = { version = "=0.4.7", optional = true }
soroban-env-host = { path = "..", features = ["fuzz"]}

[features]
default = ["libfuzzer"]
libfuzzer = ["dep:libfuzzer-sys"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "expr"
path = "fuzz_targets/expr.rs"
test = false
doc = false
required-features = ["libfuzzer"]

[[bin]]
name = "wasmi"
path = "fuzz_targets/wasmi.rs"
test = false
doc = false
required-features = ["libfuzzer"]
