[package]
name = "debug_logging"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-env-common = { workspace = true }
soroban-env-host = { workspace = true, features = ["testutils"] }
soroban-synth-wasm = { workspace = true }
arbitrary ={ workspace = true }
