[workspace]
resolver = "2"

members = [
    "debug_logging",
]

[profile.release]
debug = 1

[workspace.dependencies]
libfuzzer-sys = "0.4"

[workspace.dependencies.soroban-sdk]
version = "20.0.0-rc2"
# # If I swap the two lines below, it gives me an weird error about version mismatch
# git = "https://github.com/stellar/rs-soroban-sdk"
path = "../../../rs-soroban-sdk/soroban-sdk"

[workspace.dependencies.soroban-env-common]
version = "20.0.0-rc2"
git = "https://github.com/stellar/rs-soroban-env"

[workspace.dependencies.soroban-env-host]
version = "20.0.0-rc2"
git = "https://github.com/stellar/rs-soroban-env"

[workspace.dependencies.soroban-synth-wasm]
path = "../../soroban-synth-wasm"

# Always build from the local instance of env
[patch."https://github.com/stellar/rs-soroban-env"]
soroban-env-common = { path = "../../soroban-env-common" }
soroban-env-guest = { path = "../../soroban-env-guest" }
soroban-env-host = { path = "../../soroban-env-host" }

# Always build using the local SDK. Usually the env change is accompanied with
# the corresponding SDK change.
# [patch."https://github.com/stellar/rs-soroban-sdk"]
# soroban-sdk = { path = "../../../rs-soroban-sdk/soroban-sdk" }