# This file defines a workspace that is _periodically_ recompiled as part of
# updating the WASM files that are then embedded as as bytes constants in the
# surrounding crate `soroban-test-wasms`.
#
# Neither the rust crates in this workspace, nor the workspace itself, are (in
# cargo's mind) part of the outer workspace containing
# soroban-env-{host,guest,macros,wasm-tests} etc. The inner workspace is
# excluded from the outer workspace, and the crates within it must be manually
# built (and should only be built as WASM). See the adjacent `Makefile` for
# invocation.
#
# The dependency graph here is complex and subtle and needs to be understood if
# you're going to use it correctly. There is further explanation in
# https://rs-soroban-env/soroban-test-wasms/README.md

[workspace]
resolver = "2"

members = [
    "add_i32",
    "fib",
    "contract_data",
    "create_contract",
    "invoke_contract",
    "linear_memory",
    "vec",
    "hostile",
    "complex",
    "fannkuch"
]
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# Always build from the local instance of env as we need to rebuild test WASMs
# only due to the env changes.
[patch."https://github.com/stellar/rs-soroban-env"]
soroban-env-common = { path = "../../soroban-env-common" }
soroban-env-guest = { path = "../../soroban-env-guest" }
soroban-env-host = { path = "../../soroban-env-host" }

[workspace.dependencies.soroban-sdk]
version = "0.2.1"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "63bef69c"

# Uncomment the following to build against local SDK. This is useful when env
# changes are breaking for SDK and require the respective SDK change
# [patch."https://github.com/stellar/rs-soroban-sdk"]
# soroban-sdk = { path = "../../../rs-soroban-sdk/soroban-sdk" }

