# This file defines a workspace that is _periodically_ recompiled as part of
# updating the WASM files that are then embedded as as bytes constants in the
# surrounding crate `soroban-test-wasms`.
#
# Neither the rust crates in this workspace, nor the workspace itself, are (in
# cargo's mind) part of the outer workspace containing
# soroban-env-{host,guest,macros,wasm-tests} etc. The inner workspace is
# excluded from the outer workspace, and the crates within it must be manually
# built (and should only be built as WASM). See the adjacent `Makefile` for
# invocation.
#
# The dependency graph here is complex and subtle and needs to be understood if
# you're going to use it correctly. There is further explanation in
# https://rs-soroban-env/soroban-test-wasms/README.md

[workspace]
resolver = "2"

members = [
    "add_i32",
    "auth",
    "fib",
    "contract_data",
    "create_contract",
    "invoke_contract",
    "linear_memory",
    "vec",
    "hostile",
    "complex",
    "fannkuch",
    "simple_account",
]
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# Always build from the local instance of env as we need to rebuild test WASMs
# only due to the env changes.
[patch."https://github.com/stellar/rs-soroban-env"]
soroban-env-common = { path = "../../soroban-env-common" }
soroban-env-guest = { path = "../../soroban-env-guest" }
soroban-env-host = { path = "../../soroban-env-host" }

[workspace.dependencies.soroban-sdk]
version = "0.4.3"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "e7910c7057088b3418d84af04f2c04313d0c756f"

[workspace.dependencies.soroban-auth]
version = "0.4.3"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "e7910c7057088b3418d84af04f2c04313d0c756f"

# Always build using the local SDK. Usually the env change is accompanied with
# the corresponding SDK change.
[patch."https://github.com/stellar/rs-soroban-sdk"]
soroban-sdk = { path = "../../../rs-soroban-sdk/soroban-sdk" }
soroban-auth = { path = "../../../rs-soroban-sdk/soroban-auth" }

#[patch."https://github.com/stellar/rs-stellar-xdr"]
#stellar-xdr = { path = "../../../rs-stellar-xdr/" }