[package]
name = "fuzz_debug_logging"
version = "0.0.0"
authors = ["Stellar Development Foundation <info@stellar.org>"]
license = "Apache-2.0"
edition = "2021"
publish = false
rust-version = "1.65"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"]}
soroban-env-common = { workspace = true }
soroban-env-host = { workspace = true, features = ["next", "testutils"] }
soroban-synth-wasm = { workspace = true }

[features]
next = ["soroban-env-common/next"]